--- a/mos.yml
+++ b/mos.yml
@@ -2,6 +2,9 @@ author: mongoose-os
 type: lib
 description: Collection of libraries for demos
 version: 1.0
+libs_version: ${mos.version}
+modules_version: ${mos.version}
+mongoose_os_version: ${mos.version}
 
 sources:
   - src
@@ -14,6 +17,6 @@ tags:
   - demo
 
 libs:
-  - origin: https://github.com/mongoose-os-libs/i2c
+  - origin: https://github.com/mamuesp/i2c
 
 manifest_version: 2017-09-29
