--- a/mos.yml
+++ b/mos.yml
@@ -31,6 +31,7 @@ tags:
   - c
 
 libs:
-  - origin: https://github.com/mamuesp/swiss-army-knife
+  - origin: https://github.com/mamuesp/common-tools
+  - origin: https://github.com/mamuesp/zip-tools
 
 manifest_version: 2017-09-29
